<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="br.dev.marcosvirgilio.seg.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="br.dev.marcosvirgilio.seg.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="br.dev.marcosvirgilio.seg.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_cad_usuario"
        android:name="br.dev.marcosvirgilio.seg.ui.usuario.CadUsuarioFragment"
        android:label="@string/title_cad_usuario"
        tools:layout="@layout/fragment_cad_usuario" />

    <fragment
        android:id="@+id/navigation_con_usuario"
        android:name="br.dev.marcosvirgilio.seg.ui.usuario.ConUsuarioFragment"
        android:label="@string/title_con_usuario"
        tools:layout="@layout/fragment_con_usuario_list" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="br.dev.marcosvirgilio.seg.ui.menu.ItemMenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu_list" />

</navigation>